fix: fix by adding overflow hidden in the body in case there is a weird overflow when focusing
some elements like input in chrome

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,7 +1,4 @@
-html,
-body,
-#root {
-  height: 100%;
+html {
   box-sizing: border-box;
 }
 
@@ -15,5 +12,11 @@ html,
 body {
   padding: 0;
   margin: 0;
+  height: 100%;
   font-family: "Inter", sans-serif;
+  overflow: hidden;
+}
+
+#root {
+  height: 100%;
 }
